--- a/Spock-rest.cabal
+++ b/Spock-rest.cabal
@@ -21,12 +21,15 @@ library
                 Web.Spock.Rest
   build-depends:
                 base >= 4.7 && < 5,
+                bytestring >=0.10,
+                text >=1.2,
                 hvect >=0.3,
                 Spock >=0.9,
                 reroute >=0.3,
                 aeson >=0.8,
                 mtl >=2.2,
-                HList >=0.4
+                HList >=0.4,
+                http-types >=0.8
 
   default-language:    Haskell2010
 
